--- a/dev_src/html_file_list.html
+++ b/dev_src/html_file_list.html
@@ -2,7 +2,7 @@
 <hr>
 
 
-<div class='pagination' onclick="Show_folder_maker()">Create Folder</div><br>
+<!-- <div class='pagination' onclick="Show_folder_maker()">Create Folder</div><br>
 
 <br>
-<hr><br>
+<hr><br> -->
