--- a/dev_src/html_script.html
+++ b/dev_src/html_script.html
@@ -344,6 +344,7 @@ class ProgressBars {
 		/* Data Structure 
 		{index: {
 			type: "upload", or "zip"
+			status: "waiting" | "running" | "done" | "error"
 			form_id: 0, // UploadManager.uploaders[form_id]
 			persent: 0,
 			source_dir: "", // location from where the file is being uploaded
@@ -351,6 +352,10 @@ class ProgressBars {
 			status_color: "", // status color for the text
 		}, ...} */
 		this.bar_elements = {}
+
+		this.island_bar = byId("progress-island")
+		this.island_up_count = byId("progress-uploads-count")
+		this.island_zip_count = byId("progress-zips-count")
 	}
 
 	new(type, id, source_dir) {
@@ -428,6 +433,31 @@ class ProgressBars {
 
 	}
 
+	
+	update_island() {
+		let up_count = 0
+		let up_done_count = 0
+		let zip_count = 0
+		let zip_done_count = 0
+		for (let index in this.bars) {
+			let bar = this.bars[index]
+			if (bar.type == "upload") {
+				up_count += 1;
+				if (bar.status == "done") {
+					up_done_count += 1;
+				}
+			} else if (bar.type == "zip") {
+				zip_count += 1;
+				if (bar.status == "done") {
+					zip_done_count += 1;
+				}
+			}
+		}
+		this.island_up_count.innerText = "(" + up_done_count + '/' + up_count + ')'
+		this.island_zip_count.innerText = "(" + zip_done_count + '/' + zip_count + ')'
+	}
+
+
 	update(index, datas={}) {
 		let bar = this.bars[index]
 		for (let key in datas) {
@@ -459,6 +489,8 @@ class ProgressBars {
 
 		let bar_progress = bar_element.getElementsByClassName("progress_bar_progress")[0]
 		bar_progress.value = bar.percent
+		
+		this.update_island()
 	}
 
 	show_list() {
@@ -650,6 +682,14 @@ class UploadManager {
 			var prog = 0, 
 			msg = "",
 			color = "green"
+			status = "waiting"
+
+			
+			progress_bars.update(prog_id, {
+						"status_text": "Waiting",
+						"status_color": color,
+						"status": "waiting",
+						"percent": 0})
 
 		
 			// const filenames = formData.getAll('files').map(v => v.name).join(', ')
@@ -659,23 +699,34 @@ class UploadManager {
 			request.onreadystatechange = () => {
 				if (request.readyState === XMLHttpRequest.DONE) {
 					msg = `${request.status}: ${request.statusText}`
+					status = "error"
+					color = "red"
+					prog = 0
 					if (request.status === 401){
 						msg = 'Incorrect password';
-						color = "red"
 					} else if (request.status == 503) {
 						msg = 'Upload is disabled'
-						color = "red"
 					} else if (request.status === 0) {
 						msg = 'Connection failed (Possible cause: Incorrect password or Upload disabled)'
-						color = "red"
 					} else if (request.status === 204 || request.status === 200) {
 						msg = 'Success'
 						color = "green"
+						prog = 100
 					}
 					
 					progress_bars.update(prog_id, {
 						"status_text": msg,
-						"status_color": color})
+						"status_color": color,
+						"status": status,
+						"percent": prog})
+
+					if (status === "error") {
+						msg = "Upload Failed"
+					} else {
+						msg = "Upload Complete"
+					}
+					toaster.toast(msg, 3000, color)
+					alert(msg)
 				}
 			}
 			request.upload.onprogress = e => {
@@ -689,6 +740,7 @@ class UploadManager {
 				progress_bars.update(prog_id, {
 						"status_text": msg,
 						"status_color": "green",
+						"status": "running",
 						"percent": prog})
 			}
 			request.send(formData)
@@ -801,8 +853,8 @@ class UploadManager {
 	}
 
 	show(index){
-		form = this.uploaders[index];
-		popup_msg.createElement("Upload Files", form);
+		let form = this.uploaders[index];
+		popup_msg.createPopup("Upload Files", form);
 		popup_msg.show();
 	}
 
